data/derived/comb/progs/unify/prog7893.ml.out
Characters 90-112:
  (((addition(m,n)+y)/10)@z, [(addition(m,n)+y) mod 10]@z) 
   ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
